# favelamusic

./: .gitignore  .prettierignore  Procfile.dev  package-lock.json  package.json  pyproject.toml
app/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  signals.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_artist_youtube_link.py  0003_artist_youtube_link_alter_userprofile_email.py  0004_rating.py  0005_playlist.py  0006_trackplay_follower.py  0007_videoplay.py  0008_alter_artist_genre_alter_follower_created_at_and_more.py  0009_notification.py  0010_artist_latitude_artist_location_name_and_more.py  0011_badge_userbadge.py
core/: asgi.py  settings.py  urls.py
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/app/: all_badges.html  artist_create.html  artist_dashboard.html  artist_delete.html  artist_detail.html  artist_update.html  contact.html  contact_success.html  home.html  map.html  notifications_list.html  playlist_confirm_delete.html  playlist_detail.html  playlist_form.html  playlist_list.html  producer_create.html  rating_confirm_delete.html  rating_form.html  userprofile_detail.html
templates/partials/: notification_component.html
templates/registration/: login.html
theme/static/: artist_update_media_handler.js  audioPlayer.js  circle.js  color_schemes.js  flash.js  headingSplit.js  index.js  logo.js  svg.js  (+5 more)
(+4 files in other folders)
