[project]
name = "favelamusic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "binaryornot>=0.4.4",
    "certifi>=2025.4.26",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "daphne>=4.2.1",
    "dj-database-url>=3.0.0",
    "django>=5.2.1",
    "django-allauth[socialaccount]>=65.9.0",
    "django-anymail[sendgrid]>=13.0",
    "django-extensions>=4.1",
    "django-tailwind-4[reload]",
    "django-widget-tweaks>=1.5.0",
    "editorconfig>=0.17.0",
    "filetype>=1.2.0",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "json5>=0.12.0",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "pathspec>=0.12.1",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "pygments>=2.19.1",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "six>=1.17.0",
    "text-unidecode>=1.3",
    "tqdm>=4.67.1",
    "types-python-dateutil>=2.9.0.20250516",
    "urllib3>=2.4.0",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "cssbeautifier>=1.15.4",
    "django-debug-toolbar>=5.2.0",
    "djlint>=1.36.4",
    "honcho>=2.0.0",
    "jsbeautifier>=1.15.4",
    "rich>=14.0.0",
    "ruff>=0.11.11",
]
